source/main/default/objects/TriggerFactorySetting__mdt/TriggerFactorySetting__mdt.object-meta.xml
<CustomObject>
    <label>Trigger Factory Setting</label>
    <pluralLabel>Trigger Factory Settings</pluralLabel>
</CustomObject>