source/main/default/objects/TriggerFactorySetting__mdt/fields/IsDisabled__c.field-meta.xml
<CustomField>
    <fullName>IsDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Disabled, the Trigger is skipped entirely in its execution, regardless of User and/or Profile</description>
    <label>Disabled</label>
    <type>Checkbox</type>
</CustomField>