source/main/default/objects/TriggerFactorySetting__mdt/fields/OrderOfExecution__c.field-meta.xml
<CustomField>
    <fullName>OrderOfExecution__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Order of Execution</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>