source/main/default/objects/TriggerFactorySetting__mdt/fields/RecordTypeIds__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeIds__c</fullName>
    <inlineHelpText>Leave this empty if the Trigger Handler should run for all Record Types of the SObject. Separate more than one Record Type Id by &quot;;&quot;</inlineHelpText>
    <label>Record Type Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>