source/main/default/objects/TriggerFactorySetting__mdt/fields/SObjectName__c.field-meta.xml
<CustomField>
    <fullName>SObjectName__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>