source/main/default/objects/TriggerFactorySetting__mdt/listViews/Factory_Settings.listView-meta.xml
<ListView>
    <fullName>Factory_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SObjectName__c</columns>
    <columns>OrderOfExecution__c</columns>
    <columns>ClassName__c</columns>
    <filterScope>Everything</filterScope>
    <label>Factory Settings</label>
</ListView>